<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_benifits"
    android:orientation="vertical"
    tools:context="com.t_mtimer.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="WHY T-M ? "
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="5"
        android:background="@color/White_trans"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lString1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lString2"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lString3"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lString4"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lString5"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lString6"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@android:color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lString7"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tm_site"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:autoLink="web"
        android:text="@string/HomeNote"
        android:textSize="15sp" />
    <!---->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_start" />
    </LinearLayout>

</LinearLayout>
